update all file

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     <!-- Favicons -->
     <base href="https://harendra-code.github.io/my-repo/">
-    <link rel="icon" href="#{$base-url}assets/img/favicons/favicon.ico">
+    <link rel="icon" href="assets/img/favicons/favicon.ico">
 
     <!-- Custom styles for this template with bootstrap css -->
     <!-- build:css -->
-        <link href="#{$base-url}assets/css/app.css" rel="stylesheet" type="text/css">
+        <link href="assets/css/app.css" rel="stylesheet" type="text/css">
     <!-- endbuild -->
 </head>
 
